Revision history for Perl module Math::Prime::Util

0.32  2013-09

    [Functions Added]
      - is_proven_prime
      - is_proven_prime_with_cert
      - carmichael_lambda
      - znorder
      - prime_iterator_object

    - Added Math::Prime::Util::PrimeIterator.  A more feature-rich iterator
      than the simple closure one from prime_iterator.  Experimental.

    - Input validation accepts bigint objects and converts them to scalars
      entirely in XS.

    - random_nbit_prime now uses Fouque and Tibouchi A1.  Slightly better
      uniformity and typically a bit faster.

    - Use MPU::GMP::pn_primorial if we have it.

    - Make LMO primecount work (albeit a simplistic version).  Memory
      limiting features added to phi calculations, so the phi calculations
      should stay under ~150MB even with giant sizes.
      Thanks to Kim Walisch for all discussions about this.

    - divisor_sum can take an integer 'k' in the second argument to compute
      sigma_k.  This is much faster than using subs, especially when the
      result can be computed in XS using native precision.  For integer
      second arguments, the result will automatically be a bigint if needed.
      It is also much faster for larger inputs.

    - Incorporate Montgomery reduction for primality testing, thanks to
      Wojciech Izykowski.  This is a 1.3 to 1.5x speedup for is_prob_prime,
      is_prime, and is_strong_pseudoprime for numbers > 2^32 on x86_64.
      This also help things like prime_iterator for values > 2^32.

    - Montgomery reduction used in Lucas and Frobenius tests.  Up to 2x
      speedup for 33 to 64-bit inputs on x86_64/gcc platforms.

    - Primality functions moved to their own file primality.c.

    - Some fixes around near maxint primes, forprimes, etc.

    - Bytes::Random::Secure is loaded only when random prime functionality
      is used.  Shaves a few milliseconds and bytes off of startup.

    - Speedup for Perl (no GMP) primality and random nbit primes.